[IMAP Resource] Split large UID STORE commands to multiple smaller ones

Although not specified in RFC, IMAP servers usually have some limit on maximal
length of a command send by clients. This is best visible in case of ChangeItemsFlagsTask,
which would create an insanely long STORE command when user marked as read
thousands of emails at once.

To prevent servers from rejecting our requests, we split large STORE requests
to multiple smaller ones, each of 2000 UIDs at most. 2000 sounds like a good
compromise between not hitting it too often (i.e. users usually mark as read
few emails at once, hundreds at best) and not hitting the server-side limits
(every server out there should handle 2000 UIDs in a request). This number
can be tuned later of course if we find out it's too much/not enough.

REVIEW: 120446
BUG: 339565
FIXED-IN: 4.14.2